[FIX][UI] Removed from the top and topbar module zone nav elements in the... --- * [FIX][UI] Removed from the top and topbar module zone nav elements in the layout_view.tpl files the d-flex, justify-content-between, and align-content-center (in topbar) classes because these are redundant as they are already set in _tiki-modules.scss (where the selectors were changed from id to class). If these properties aren't wanted at a site, it will now be easier to override them.
See merge request tikiwiki/tiki!5922

--- a/themes/base_files/scss/_tiki-modules.scss
+++ b/themes/base_files/scss/_tiki-modules.scss
@@ -17,10 +17,10 @@ header.container,
 // Vertically center visible content in fixed-top navbar
 @media(min-width: 720px) {.layout_social .fixed-top .top_modules .module { align-self: center; } }
 
-#top_modules,
-#topbar_modules,
-#pagetop_modules,
-#pagebottom_modules,
+.top_modules,
+.topbar_modules,
+.pagetop_modules,
+.pagebottom_modules,
 .bottom_modules {
     display: flex;
     flex-direction: row;
@@ -29,8 +29,8 @@ header.container,
 
 .topbar .navbar { padding: 0; }
 
-#pagetop_modules,
-#pagebottom_modules,
+.pagetop_modules,
+.pagebottom_modules,
 .bottom_modules {
     align-items: flex-start;
     flex-wrap: wrap;
